--- a/json/project-list.json
+++ b/json/project-list.json
@@ -45,8 +45,8 @@
             "link": "week11/index.html"
         },
         {
-            "week": "week 12",
-            "link": "week11/index.html"
+            "week": "Final Project",
+            "link": "project/index.html"
         }
     ]
 }
